<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="hu.bme.aut.android.liftlog.activities.CalculatorActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm1_calc_title"
        android:textSize="35sp"
        android:layout_marginVertical="30dp"/>


    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/weight_kg_lbs"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etCalcWeight"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="120dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/reps_performed"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etCalcReps"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/calcResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/result"
        android:textSize="50dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginHorizontal="120dp"

        android:textSize="16sp"
        android:text="@string/calculate"/>




</LinearLayout>