<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSecondary"
            app:title="Random Meal"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="35dp"

        android:text="@string/meal_suggestion"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="@color/orange"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tvMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="20dp"

        android:text="@string/meal"
        android:textSize="30sp"


        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/cvMeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cvMeal"
        android:layout_width="match_parent"


        app:cardUseCompatPadding="true"
        android:layout_height="275dp"
        android:layout_marginHorizontal="10dp"


        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout">


        <ImageButton
            android:id="@+id/ibMeal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/grey"
            />




    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Refresh"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMeal">


    </Button>


    <TextView
        android:id="@+id/tvWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="20dp"

        android:text="@string/watch_on_youtube"
        android:textSize="15sp"


        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMeal" />





</androidx.constraintlayout.widget.ConstraintLayout>